crates/solidity-v2/testing/snapshots/diagnostics_output/structure/variable_declaration_not_in_block/else_branch/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[SyntaxError 9079] Error: Variable declarations can only be used inside blocks.
    ╭─[input.sol:10:13]
    │
 10 │             uint b = 2;
    │             ─────┬────  
    │                  ╰────── Error occurred here.
────╯
